project(
    'cpu-button',
    'cpp',
    default_options: [
        'warning_level=3',
        'cpp_std=c++20'
    ],
    license: 'Apache-2.0',
    version: '0.1',
    meson_version: '>=0.57.0',
)

executable(
  'cpu-button',
  'cpu-button.cpp',
  install: true,
  install_dir: get_option('bindir')
)

